# cogx

binding/development/: .project  CMakeCache.txt  CMakeLists.txt  build.dirs  build.exclude  build.include  build.xml  common.xml  idl.properties  local-cast-server.sh  targets.xml  testwithgenerators.sh
binding/development/BUILD_T/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt
binding/development/data/: ambiguities.txt
binding/development/log/: logbatch.txt
binding/development/scripts/: cleanup-and-compile.sh  generate_documentation.sh  omniorb.sh  plotResults2.py  plotresults3.py  readWER.py  run-exp.sh  run-planning-prep.sh  runComSysTests.sh  runDiscriminativeLearner.sh  runInteractiveBindingTest.sh  starttccg.sh  visualize_dot.sh
binding/development/specifications/binding/: Doxyfile
binding/development/specifications/coma_reasoning/: doc.txt
binding/development/specifications/comsys/: Doxyfile  comsys_spec.txt
binding/development/specifications/laser_features_extractor/: Doxyfile
binding/development/specifications/main/: main.txt
binding/development/specifications/motivation/: Doxyfile  doc.txt
binding/development/specifications/scenario/: doc_explorer.txt
binding/development/specifications/template/: doc.txt
binding/development/specifications/vision/: Doxyfile  bham_scenarios_doc.txt  doc.txt  uol_doc.txt
binding/development/subarchitectures/binder/: CMakeLists.txt  build.xml
binding/development/subarchitectures/binding.sa/: CMakeLists.txt  DoxyfileCpp  VERSION
binding/development/subarchitectures/comsys.mk4/: Doxyfile
binding/development/subarchitectures/manipulation.sa/: CMakeLists.txt  build.xml
binding/development/subarchitectures/nav.sa/: build.xml
binding/development/subarchitectures/planning.sa/: VERSIONS  build.xml
binding/development/subarchitectures/playmate/: CMakeLists.txt
binding/development/subarchitectures/spatial.sa/: build.xml
binding/development/subarchitectures/vision/: build.xml
binding/development/tests/: ComSysMetaConfig.xml  ComSysTests_archive.xml  README.txt
binding/development/tests/data/: utterancesDialMoves.xml  utterancesDiscRef.xml  utterancesProxyFactories.xml  utterancesSDRS.xml  utterancesToPack.xml  utterancesToParse.xml  utterancesToPlan.xml
binding/development/tests/genconfig/: dialoguemoves4.cast  dialoguemoves5.cast  discrefbinding3.cast  discrefbinding4.cast  packing5.cast  parsing1.cast  parsing3.cast  parsing4.cast  parsing5.cast  parsing6.cast  parsing8.cast  proxyfactories1.cast  proxyfactories12.cast  proxyfactories13.cast  proxyfactories14.cast  proxyfactories15.cast  proxyfactories17.cast  proxyfactories21.cast  proxyfactories22.cast  proxyfactories23.cast  proxyfactories25.cast  proxyfactories27.cast  proxyfactories28.cast  proxyfactories31.cast  proxyfactories32.cast  proxyfactories33.cast  proxyfactories5.cast  proxyfactories7.cast  tts1.cast  tts2.cast  visualgrounding1.cast  visualgrounding2.cast  visualgrounding2.fv  visualgrounding3.fv  visualgrounding5.cast  visualgrounding5.fv  visualgrounding6.cast  visualgrounding7.cast  visualgrounding7.fv  visualgrounding9.cast  (+1 more)
binding/development/tests/psconfigs/: testconfig_NBest10_AC_NR.txt  testconfig_NBest10_AC_R.txt  testconfig_NBest10_A_R.txt  testconfig_NBest10_None_NR.txt  testconfig_NBest10_SeAC_R.txt  testconfig_NBest10_SeA_NR.txt  testconfig_NBest10_SeA_R.txt  testconfig_NBest10_SeSyAC_R.txt  testconfig_NBest10_SeSyA_NR.txt  testconfig_NBest10_SeSyA_R.txt  testconfig_NBest10_SeSyC_NR.txt  testconfig_NBest10_SeSyC_R.txt  testconfig_NBest10_SeSy_NR.txt  testconfig_NBest10_Se_NR.txt  testconfig_NBest10_Se_R.txt  testconfig_NBest1_AC_R.txt  testconfig_NBest1_A_NR.txt  testconfig_NBest1_A_R.txt  testconfig_NBest1_None_NR.txt  testconfig_NBest1_None_R.txt  testconfig_NBest1_SeAC_R.txt  testconfig_NBest1_SeA_R.txt  testconfig_NBest1_SeC_R.txt  (+34 more)
cmake/branches/post-review-yr2-11561-minimal/: CMakeLists.txt  PythonBuild.cmake  build.properties.in
cmake/trunk/: CMakeLists.txt  CollectIce.cmake  FindCg.cmake  FindCuda.cmake  FindGLEW.cmake  FindMatlabCompiler.cmake  FindV4R.cmake  build.properties.in  build.xml  makev4r.sh
code/cmake/trunk/: CMakeLists.txt  FindCG.cmake  FindIL.cmake  FindLibPlot.cmake  FindMatlabCompiler.cmake  FindOpenNI.cmake  FindV4R.cmake  PythonBuild.cmake  build.properties.in  build.xml  makev4r.sh  v4r.cmake
code/episodic/trunk/: CMakeLists.txt  build.xml
code/systems/binder-devel/: CMakeLists.txt  build.xml
code/systems/grabber/: CMakeLists.txt
code/systems/spring-school-2010/: CMakeLists.txt  build.xml  castcontrol.conf  log4j.properties.server  run-school-simulation.sh
code/tools/alchemy/: CMakeLists.txt
code/vision/trunk/: CMakeLists.txt
kth/branches/year1/: CMakeLists.txt  test_year1
kth/tags/withbinder090813/: CMakeLists.txt
smlearning/development/cmake/: CMakeLists.txt
smlearning/trunk/cmake/: CMakeLists.txt
subarchitectures/binder/trunk/: CMakeLists.txt  build.xml
subarchitectures/comsys/trunk/: CMakeLists.txt  build.xml
subarchitectures/dialogue.sa/trunk/: CMakeLists.txt  build-abducer.sh.in  build.xml  run-tccg
subarchitectures/manipulation.sa/trunk/: CMakeLists.txt  build.xml
subarchitectures/spatial.sa/trunk/: CMakeLists.txt  build.xml
subarchitectures/vision.sa/trunk/: CMakeLists.txt  build.xml
systems/datacollection/: CMakeLists.txt  cureconfig.ccf  save_data.cast  svn.externals  uploaddata.py
systems/datacollection/datatools/: computeTrajectoryLengthAndTime.py
systems/datacollection/trunk/: CMakeLists.txt  cleandata.sh  packdata.sh  save_data.cast
tools/exslamloc/trunk/: CMakeLists.txt  exslamloc.cc  tobias.graph
tools/scripts/trunk/: CMakeLists.txt  cast-server-start.in  cmake-apply  cmake-freeze  collect-logs.sh  dc1394chmod  log4j-server.in  logfilter.py  makeslice  map-load-local.sh  map-save-local.sh  parasvnup  peekabot-start.sh  showversions  universalIceClient.in
tools/v4r/trunk/: CMakeLists.txt  Doxygen  cmake-apply  cmake-settings-cogx.txt  tomgine.cmake  v4r.cmake
vision/branches/20090415/: CMakeLists.txt
(+29352 files in other folders)
